--- a/blog_example/blog/templates/blog/post/list.html
+++ b/blog_example/blog/templates/blog/post/list.html
@@ -1,6 +1,9 @@
 {% extends "blog/base.html" %}
 {% block title %}My Blog{% endblock %}
 {% block content %}
+    {% if tag %}
+        <h2>Posts tagged with "{{ tag.name }}"</h2>
+    {% endif %}
     <h1>My Blog</h1>
     {% for post in posts %}
     <h2>
@@ -8,10 +11,17 @@
             {{ post.title }}
         </a>
     </h2>
+    <p class="tags">Tags:
+    {% for tag in post.tags.all %}
+        <a href="{% url "blog:post_list_by_tag" tag.slug %}">
+            {{ tag.name }}
+        </a> {% if not forloop.last %}, {% endif %}
+        {% endfor %}
+    </p>
     <p class="date">
         Published {{ post.publish }} by {{ post.author }}
     </p>
     {{ post.body|truncatewords:30|linebreaks }}
     {% endfor %}
-    {% include "pagination.html" with page=page_obj %}
+    {% include "pagination.html" with page=posts %}
 {% endblock %}
