--- a/bookmarks/account/templates/account/login.html
+++ b/bookmarks/account/templates/account/login.html
@@ -2,7 +2,10 @@
 {% block title %}Login{% endblock %}
 {% block content %}
     <h1>Login</h1>
-    <p>Please, use the following form to login:</p>
+    <p>
+        Please, use the following form to login.
+        If you don't have an account: <a href="{% url "register" %}">register here</a>
+    </p>
     <form method="post">
         {{ form.as_p }}
         {% csrf_token %}
