--- a/bookmarks/account/templates/account/dashboard.html
+++ b/bookmarks/account/templates/account/dashboard.html
@@ -2,5 +2,6 @@
 {% block title %}Dashboard{% endblock %}
 {% block content %}
     <h1>Dashboard</h1>
-    <p>Welcome to you dashboard.</p>
+    Welcome to your dashboard. You can <a href="{% url "edit" %}">edit your profile</a> or
+    <a href="{% url "password_change" %}">change your password</a>.
 {% endblock %}
