--- a/educa/students/templates/students/course/detail.html
+++ b/educa/students/templates/students/course/detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load cache %}
 {% block title %}
     {{ object.title }}
 {% endblock %}
@@ -10,7 +11,8 @@
         <h3>Modules</h3>
         <ul id="modules">
             {% for m in object.modules.all %}
-                <li data-id="{{ m.id }}" {% if m == module %}class="selected"{% endif %}>
+                <li data-id="{{ m.id }}"
+                    {% if m == module %}class="selected"{% endif %}>
                     <a href="{% url "student_course_detail_module" object.id m.id %}">
             <span>
               Module <span class="order">{{ m.order|add:1 }}</span>
@@ -25,11 +27,13 @@
         </ul>
     </div>
     <div class="module">
-        {% for content in module.contents.all %}
-            {% with item=content.item %}
-                <h2>{{ item.title }}</h2>
-                {{ item.render }}
-            {% endwith %}
-        {% endfor %}
+        {% cache 600 module_contents module %}
+            {% for content in module.contents.all %}
+                {% with item=content.item %}
+                    <h2>{{ item.title }}</h2>
+                    {{ item.render }}
+                {% endwith %}
+            {% endfor %}
+        {% endcache %}
     </div>
 {% endblock %}
